--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div class="header">
                 <div class="logo">
                     <img src="logo.jpg">
-                    <ul>
-                        <li class="header-list"><a href="#">Home</a></li>
+                    <ul class="header-list">
+                        <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Projects</a></li>
